--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,14 +1,24 @@
 .navbar-teamup {
-  justify-content: space-between;
+  // justify-content: space-between;
   background: white;
   position: sticky;
   top: 0;
 }
 
-.navbar-teamup .navbar-collapse {
-  flex-grow: 0;
-}
-
 .navbar-teamup .navbar-brand img {
   width: 100px;
+}
+
+.avatar {
+  // padding: 0px 5px;
+  width: 40px;
+  height: 40px;
+}
+
+.navbar-teamup h4 {
+  margin: 0px;
+}
+
+.navbar-teamup li {
+  line-height: 35px;
 }
