--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,22 +1,30 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-teamup fixed-top">
-  <nav class="navbar bg-light fixed-top">
-    <div class="container-fluid">
+<nav class="navbar bg-light fixed-top navbar-teamup">
+  <div class="container-fluid">
 
-      <div class ="left-side">
-        <% if user_signed_in? %>
-          <%= link_to events_path do %>
-            <div class="navbar-brand d-flex">
-                  <%= image_tag "teamup_logo.png", alt: "TeamUp", width: 300 %>
-            </div>
-          <% end %>
-        <% else %>
-          <%= link_to root_path do %>
-            <div class="navbar-brand d-flex">
-                <%= image_tag "teamup_logo.png", alt: "TeamUp", width: 300 %>
-            </div>
-          <% end %>
+    <div class ="left-side">
+      <% if user_signed_in? %>
+        <%= link_to events_path do %>
+          <div class="navbar-brand d-flex">
+            <%= image_tag "teamup_logo.png", alt: "TeamUp", width: 300 %>
+          </div>
         <% end %>
-      </div>
+      <% else %>
+        <%= link_to root_path do %>
+          <div class="navbar-brand d-flex">
+            <%= image_tag "teamup_logo.png", alt: "TeamUp", width: 300 %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+
+    <div class ="right-side">
+      <% if user_signed_in? %>
+        <% if current_user.photo.attached? %>
+          <%= cl_image_tag current_user.photo.key, width: 50, height: 50, class: "avatar", crop: :thumb, gravity: :face %>
+        <% else %>
+          <%= image_tag "placeholder.png", class: "avatar" %>
+        <% end %>
+      <% end %>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -25,34 +33,45 @@
           <div class="offcanvas-header">
             <% if user_signed_in? %>
               <% if current_user.photo.attached? %>
-                <%= cl_image_tag current_user.photo.key, width: 40, height: 40, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false, crop: :thumb, gravity: :face %>
+                <%= cl_image_tag current_user.photo.key, width: 50, height: 50, class: "avatar", crop: :thumb, gravity: :face %>
                 <h4>Welcome, <%= current_user.first_name.capitalize %> 👋 </h4>
               <% else %>
-                <%= image_tag "placeholder.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+                <%= image_tag "placeholder.png", class: "avatar" %>
               <% end %>
             <% end %>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
 
           <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item"><%= link_to "Your Profile", profile_path %></li>
-              <li class="nav-item"><%= link_to "Messages", profile_path %></li>
-              <hr>
-              <li><%= link_to "Find an Event", events_path, class: "dropdown-item" %></li>
-              <li><%= link_to "Your Events", user_events_path, class: "dropdown-item" %></li>
-              <li><%= link_to "Your Groups", user_groups_path, class: "dropdown-item" %></li>
-              <hr>
-              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-              <li><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" } %></li>
-            </ul>
-            <form class="d-flex mt-3" role="search">
-              <input class="form-control me-2" type="search" placeholder="Find an event..." aria-label="Search">
-              <button class="btn btn-primary" type="submit">Search</button>
-            </form>
+            <% if user_signed_in? %>
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item"><%= link_to "Your Profile", profile_path %></li>
+                <li class="nav-item"><%= link_to "Messages", profile_path %></li>
+                <hr>
+                <li class="nav-item"><%= link_to "Find an Event", events_path %></li>
+                <li class="nav-item"><%= link_to "Your Events", user_events_path %></li>
+                <li class="nav-item"><%= link_to "Your Groups", user_groups_path %></li>
+                <hr>
+                <li class="nav-item"><%= link_to "Edit Profile", edit_user_registration_path %></li>
+                <li class="nav-item"><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: "delete" } %></li>
+              </ul>
+              <form class="d-flex mt-3" role="search">
+                <input class="form-control me-2" type="search" placeholder="Find an event..." aria-label="Search">
+                <button class="btn btn-primary" type="submit">Search</button>
+              </form>
+            <% else %>
+              <div class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary" %>
+                <br>
+                <%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
+              </div>
+              <form class="d-flex mt-3" role="search">
+                <input class="form-control me-2" type="search" placeholder="Find an event..." aria-label="Search">
+                <button class="btn btn-primary" type="submit">Search</button>
+              </form>
+            <% end %>
           </div>
         </div>
-
     </div>
-  </nav>
-</div>
+  </div>
+</nav>
